[UPD] finished tablet view and fixed overflow bug of the menu column

--- a/css/_partials/responsive.css
+++ b/css/_partials/responsive.css
@@ -4,7 +4,7 @@
         display: block;
     }
 
-    .app .col.menu .tablet-up{
+    .app .menu.tablet-up{
         display: flex;
     }
 
